Add Developer ID

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "A system tray icon that helps you find the perfect GIF",
 	"scripts": {
 		"start": "electron .",
-		"build": "electron-packager --platform=darwin --arch=x64 --icon=assets/Icon.icns --app-bundle-id=com.dcrousso.GIFBar --app-version=$npm_package_version --overwrite --asar --out=dist --ignore=\"^/dist$\" --ignore=\"^/media$\" --prune ."
+		"build": "electron-packager --platform=darwin --arch=x64 --icon=assets/Icon.icns --app-bundle-id=com.dcrousso.GIFBar --app-version=$npm_package_version --sign=\"Developer ID Application: Devin Rousso (Q5M4T22BE9)\" --overwrite --asar --out=dist --ignore=\"^/dist$\" --ignore=\"^/media$\" --prune ."
 	},
 	"repository": {
 		"type": "git",
@@ -27,11 +27,11 @@
 	},
 	"homepage": "https://github.com/dcrousso/GIFBar#readme",
 	"devDependencies": {
-		"electron": "^1.3.3",
-		"electron-packager": "^7.7.0"
+		"electron": "^1.4.14",
+		"electron-packager": "^8.5.0"
 	},
 	"dependencies": {
-		"electron-debug": "^1.0.0",
-		"electron-dl": "^1.0.0"
+		"electron-debug": "^1.1.0",
+		"electron-dl": "^1.6.0"
 	}
 }
